chore: prepare product sources and distribution checks for main